Kommentare korrigiert, Rendering überarbeitet und einige Fehler in allen Modulen behoben. isActivated() in ITransition hinzugefügt.
git-svn-id: svn+ssh://svn.informatik.haw-hamburg.de/srv/svn/wppetrinetze/wppetrinetze/trunk@189 3f72c222-a292-0410-9194-aba524b78705